--- a/style.css
+++ b/style.css
@@ -17,11 +17,34 @@
   background: rgba(0, 0, 0, 0.5);
   display: none;
 }
-#youwon {
-  width: 100px;
+#levelup {
   position: absolute;
-  top: 200px;
-  left: 150px;
+  width: 1000px;
+  height: 700px;
+  top: 40px;
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
+}
+#level {
+  position: absolute;
+  top: 260px;
+  left: 400px;
+  font-size: 3.25em;
+  color: #fff;
+}
+#continue {
+  position: absolute;
+  top: 360px;
+  left: 400px;
+  cursor: pointer;
+  font-size: 3.25em;
+  color: #fff;
+}
+#youwon {
+  width: 300px;
+  position: absolute;
+  top: 100px;
+  left: 350px;
   display: none;
 }
 #youlose {
@@ -39,6 +62,22 @@
   font-size: 3.25em;
   color: #fff;
 }
+#restarttable {
+  position: absolute;
+  top: 30px;
+  left: 300px;
+  cursor: pointer;
+  font-size: 3.25em;
+  color: #fff;
+}
+#leaderboard {
+  position: absolute;
+  top: 510px;
+  left: 400px;
+  cursor: pointer;
+  font-size: 3.25em;
+  color: #fff;
+}
 #myProgress {
   width: 1000px;
   background-color: grey;
@@ -48,6 +87,23 @@
   height: 30px;
   background-color: green;
 }
+#table {
+  position: absolute;
+  width: 1000px;
+  height: 700px;
+  top: 40px;
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
+}
+#cont {
+  position: absolute;
+  top: 100px;
+}
+p {
+  color: #fff;
+  margin-left: 350px;
+  font-size: 2em;
+}
 .menu {
   display: flex;
   justify-content: center;
@@ -56,4 +112,23 @@ button {
   width: 300px;
   height: 100px;
   font-size: 40px;
+}
+input[type="text"] {
+  width: 200px;
+  font-size: 2em;
+  padding-left: 24px;
+}
+.animate {
+  animation: character-appear 1s ease-in;
+}
+
+@keyframes character-appear {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
